--- a/3DWireframeEngine/3DWireframeEngine/3DWireframeEngine.vcxproj
+++ b/3DWireframeEngine/3DWireframeEngine/3DWireframeEngine.vcxproj
@@ -21,10 +21,14 @@
   <ItemGroup>
     <ClInclude Include="App.h" />
     <ClInclude Include="Main.h" />
+    <ClInclude Include="Triangle.h" />
+    <ClInclude Include="Vector3D.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Triangle.cpp" />
+    <ClCompile Include="Vector3D.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
