--- a/3DWireframeEngine/3DWireframeEngine/3DWireframeEngine.vcxproj
+++ b/3DWireframeEngine/3DWireframeEngine/3DWireframeEngine.vcxproj
@@ -22,6 +22,7 @@
     <ClInclude Include="App.h" />
     <ClInclude Include="Main.h" />
     <ClInclude Include="Matrix.h" />
+    <ClInclude Include="Mesh.h" />
     <ClInclude Include="Triangle.h" />
     <ClInclude Include="Vector3D.h" />
   </ItemGroup>
@@ -29,6 +30,7 @@
     <ClCompile Include="App.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Matrix.cpp" />
+    <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Triangle.cpp" />
     <ClCompile Include="Vector3D.cpp" />
   </ItemGroup>
