--- a/3DWireframeEngine/3DWireframeEngine/3DWireframeEngine.vcxproj
+++ b/3DWireframeEngine/3DWireframeEngine/3DWireframeEngine.vcxproj
@@ -21,7 +21,7 @@
   <ItemGroup>
     <ClInclude Include="App.h" />
     <ClInclude Include="Main.h" />
-    <ClInclude Include="Matrix.h" />
+    <ClInclude Include="Matrix4.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Triangle.h" />
     <ClInclude Include="Vector3D.h" />
@@ -29,7 +29,7 @@
   <ItemGroup>
     <ClCompile Include="App.cpp" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Matrix.cpp" />
+    <ClCompile Include="Matrix4.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Triangle.cpp" />
     <ClCompile Include="Vector3D.cpp" />
