--- a/3DEngine/3DEngine/3DEngine.vcxproj
+++ b/3DEngine/3DEngine/3DEngine.vcxproj
@@ -40,6 +40,7 @@
     <ProjectGuid>{0c668785-98e4-4190-9644-1c10f98980b8}</ProjectGuid>
     <RootNamespace>My3DWireframeEngine</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>3DEngine</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
