Add memory leaks detection

--- a/3DEngine/3DEngine/3DEngine.vcxproj
+++ b/3DEngine/3DEngine/3DEngine.vcxproj
@@ -25,6 +25,7 @@
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Triangle.h" />
     <ClInclude Include="Vector3D.h" />
+    <ClInclude Include="wxmemdbg.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp" />
