--- a/3DEngine/3DEngine/3DEngine.vcxproj.filters
+++ b/3DEngine/3DEngine/3DEngine.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="Mesh.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="wxmemdbg.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp">
